--- a/index.html
+++ b/index.html
@@ -1,13 +1,101 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pintores de Hogares Medellín</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Header con Navbar de Bootstrap -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+            <div class="container">
+                <a class="navbar-brand" href="#">Pintores Hogar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#galeria">Galería</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
+                        <li class="nav-item"><a class="btn btn-primary contact-btn" href="#contacto">Contáctanos</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero d-flex justify-content-center align-items-center">
+        <div class="hero-content text-center">
+            <h2>Transformamos tu hogar con los mejores acabados</h2>
+            <p>Profesionales en pintura de interiores y exteriores en Medellín, Colombia.</p>
+            <a href="#contacto" class="btn hero-btn">Solicita tu presupuesto</a>
+        </div>
+    </section>
+
+    <!-- Servicios -->
+    <section id="servicios" class="servicios py-5 text-center">
+        <div class="container">
+            <h2>Nuestros Servicios</h2>
+            <div class="row mt-4">
+                <div class="col-md-6">
+                    <h3>Pintura de interiores</h3>
+                    <p>Brindamos un acabado impecable para el interior de tu hogar, ajustándonos a tu estilo y necesidades.</p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Pintura de exteriores</h3>
+                    <p>Protegemos y embellecemos el exterior de tu casa con pintura resistente y duradera.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Galería -->
+    <section id="galeria" class="galeria py-5">
+        <div class="container text-center">
+            <h2>Galería</h2>
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <img src="interior.jpg" alt="Pintura de interior" class="img-fluid rounded">
+                </div>
+                <div class="col-md-6 mb-3">
+                    <img src="exterior.jpg" alt="Pintura de exterior" class="img-fluid rounded">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonios -->
+    <section id="testimonios" class="testimonios py-5 bg-light text-center">
+        <div class="container">
+            <h2>Lo que dicen nuestros clientes</h2>
+            <blockquote class="blockquote">
+                "El servicio fue excelente, pintaron mi casa en Medellín y quedó impecable. Los recomiendo totalmente."
+            </blockquote>
+            <cite>- Carlos Pérez</cite>
+        </div>
+    </section>
+
+    <!-- Contacto -->
+    <section id="contacto" class="contacto py-5 text-center">
+        <div class="container">
+            <h2>Contacto</h2>
+            <p>Ubicados en Medellín, Colombia</p>
+            <a href="mailto:contacto@pintoreshogar.com" class="btn btn-primary contact-btn">Envíanos un correo</a>
+        </div>
+    </section>
+
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2024 Pintores Hogar - Todos los derechos reservados.</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
