--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                         <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
                         <li class="nav-item"><a class="nav-link" href="#galeria">Galería</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#testimonios">Testimonios</a></li>
                         <li class="nav-item"><a class="btn btn-primary contact-btn" href="#contacto">Contáctanos</a></li>
                     </ul>
                 </div>
@@ -87,7 +86,7 @@
       </section>
 
       <!-- Testimonios -->
-      <section id="testimonios" class="testimonios py-5 bg-light text-center">
+      <!-- <section id="testimonios" class="testimonios py-5 bg-light text-center">
           <div class="container">
               <h2>Lo que dicen nuestros clientes</h2>
               <blockquote class="blockquote">
@@ -95,7 +94,7 @@
               </blockquote>
               <cite>- Carlos Pérez</cite>
           </div>
-      </section>
+      </section> -->
 
       <!-- Contacto -->
       <section id="contacto" class="contacto py-5 text-center">
