--- a/index.html
+++ b/index.html
@@ -3,32 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pintores de Hogares Medellín</title>
-    <!-- Bootstrap CSS -->
+    <title>MATICES</title>
+    <link rel="icon" href="./public/img/LogoMatices.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./src/scss/styles.scss">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-            <div class="container">
-                <img src="./public/img/LogoMatices.png" class="header-logo" alt="Logo de Matices">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto gap-5 navbar-spaces">
-                        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#galeria">Galería</a></li>
-                        <li class="nav-item"><a class="btn btn-primary contact-btn" href="#contacto">Contáctanos</a></li>
-                    </ul>
-                </div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+        <div class="container">
+            <img src="./public/img/LogoMatices.png" class="header-logo" alt="Logo de Matices">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto gap-5 navbar-spaces">
+                    <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#galeria">Galería</a></li>
+                    <li class="nav-item"><a class="btn btn-primary contact-btn" href="#contacto">Contáctanos</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
     <main>
+      <!-- WHATSAPP BUTTON -->
+        <section class="wpp">
+          <a href="https://wa.link/og7zyc"><img src="./public/img/WhatsApp.svg.webp" alt=""></a>
+        </section>
+
       <!-- Hero Section -->
         <section class="hero d-flex justify-content-center align-items-center">
           <div class="hero-content text-center">
@@ -49,7 +54,7 @@
                       <img  class="services-images"  src="./public/img/sala-de-estar.png" alt="">
                   </div>
                   <div class="col-md-6">
-                      <h3>Pintura de exteriores</h3>
+                      <h3 class="tittle-service-2">Pintura de exteriores</h3>
                       <p>Protegemos y embellecemos el exterior de tu casa con pintura resistente y duradera.</p>
                       <img class="services-images" src="./public/img/casa-moderna.png" alt="">
                   </div>
@@ -70,47 +75,53 @@
                   <img class="galery-horizontal" src="./public/img/2ancha.jpg" alt="">
                   <img class="galery-horizontal" src="./public/img/3ancha.jpg" alt="">
                 </div>
-
               </div>
 
               <div class="container-galery1">
                 <div class="container-horizontal1">
-                  <img class="galery-horizontal" src="./public/img/2ancha.jpg" alt="">
-                  <img class="galery-horizontal" src="./public/img/3ancha.jpg" alt="">
+                  <img class="galery-horizontal" src="./public/img/4ancha.jpg" alt="">
+                  <img class="galery-horizontal" src="./public/img/6ancha.jpg" alt="">
                 </div>
                 <div>
-                  <img class="galery-vertical" src="./public/img/1Larga.jpg" alt="">
+                  <img class="galery-vertical" src="./public/img/5larga.jpg" alt="">
                 </div>
               </div>
           </article>
       </section>
 
-      <!-- Testimonios -->
-      <!-- <section id="testimonios" class="testimonios py-5 bg-light text-center">
-          <div class="container">
-              <h2>Lo que dicen nuestros clientes</h2>
-              <blockquote class="blockquote">
-                  "El servicio fue excelente, pintaron mi casa en Medellín y quedó impecable. Los recomiendo totalmente."
-              </blockquote>
-              <cite>- Carlos Pérez</cite>
-          </div>
-      </section> -->
-
       <!-- Contacto -->
       <section id="contacto" class="contacto py-5 text-center">
-          <div class="container">
-              <h2>Contacto</h2>
-              <p>Ubicados en Medellín, Colombia</p>
-              <a href="mailto:contacto@pintoreshogar.com" class="btn btn-primary contact-btn">Envíanos un correo</a>
-          </div>
+        <h2>Contacto</h2>
+        <p>Rellena el siguiente formulario para ser contactado por nosotros</p>
+          <div class="container-form">
+              <form id="contact-form">
+                <div class="form-group">
+                    <label for="name">Nombre:</label>
+                    <input type="text" id="name" name="user_name" placeholder="Tu nombre" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Correo electrónico:</label>
+                    <input type="email" id="email" name="user_email" placeholder="Tu correo" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Teléfono celular:</label>
+                    <input type="tel" id="phone" name="user_phone" placeholder="Tu celular" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Mensaje:</label>
+                    <textarea id="message" name="message" placeholder="Escribe tu mensaje" required></textarea>
+                </div>
+                <button class="button-form" type="submit">Enviar</button>
+                <p id="response-message"></p>
+            </form>
+        </div>
       </section>
     </main>
 
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2024 Pintores Hogar - Todos los derechos reservados.</p>
+        <p>&copy; 2024 Matices - Todos los derechos reservados.</p>
     </footer>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
+    
 </body>
 </html>
