--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
-            <img src="./docs/" class="header-logo" alt="Logo de Matices">
+            <img src="./public/img/LogoMatices.png" class="header-logo" alt="Logo de Matices">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
