add: SEO and optimization

--- a/index.html
+++ b/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
+    <title>Matices - Pinturas Profesionales en Medellín | Servicios de Pintura Interior y Exterior</title>
+    <meta name="description" content="Matices: Expertos en transformación de espacios con pintura profesional. Servicios de pintura interior y exterior en Medellín. Calidad, precisión y color garantizados.">
+    <meta name="keywords" content="pintura medellin, pintores profesionales, pintar casas, pinturas interiores, pinturas exteriores, renovación de espacios, acabados decorativos, pintura residencial, pintura comercial">
+    
+    <!-- Metadata Open Graph para Redes Sociales -->
+    <meta property="og:title" content="Matices - Pinturas Profesionales en Medellín">
+    <meta property="og:description" content="Transformamos espacios con pintura profesional. Servicios de pintura interior y exterior en Medellín.">
+    <meta property="og:url" content="https://maticesacabados.com">
+    <meta property="og:type" content="business.business">
+    <meta property="og:image" content="https://maticesacabados.com/public/img/LogoMatices_11zon.webp">
+
+    <meta name="geo.region" content="CO-ANT">
+    <meta name="geo.placename" content="Medellín">
+    <meta name="geo.position" content="6.2476;-75.5658">
+    <meta name="ICBM" content="6.2476, -75.5658">
+
+    <meta name="contact" content="+57 3208792013">
+    <meta name="contact_email" content="juanjoarenas1218@gmail.com">
+
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "HomeAndConstructionBusiness",
+          "name": "Matices Acabados",
+          "image": "https://maticesacabados.com/public/img/LogoMatices_11zon.webp",
+          "telephone": "+57 3208792013",
+          "email": "juanjorenas1218@gmail.com",
+          "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Dirección en Medellín",
+              "addressLocality": "Medellín",
+              "addressRegion": "Antioquia",
+              "postalCode": "050000",
+              "addressCountry": "CO"
+          },
+          "geo": {
+              "@type": "GeoCoordinates",
+              "latitude": 6.2476,
+              "longitude": -75.5658
+          },
+          "openingHoursSpecification": {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": [
+                  "Monday",
+                  "Tuesday", 
+                  "Wednesday", 
+                  "Thursday", 
+                  "Friday"
+              ],
+              "opens": "08:00",
+              "closes": "18:00"
+          },
+          "serviceType": [
+              "Pintura Interior",
+              "Pintura Exterior",
+              "Acabados Decorativos"
+          ],
+          "priceRange": "$$"
+      }
+      </script>
+
+      <link rel="canonical" href="https://maticesacabados.com">
+      <link rel="alternate" hreflang="es" href="https://maticesacabados.com">
+
+    <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MATICES</title>
-    <link rel="icon" href="./public/img/LogoMatices.png" type="image/x-icon">
+    <link rel="icon" href="./public/img/LogoMatices_11zon.webp" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./src/scss/styles.scss">
 </head>
@@ -12,7 +77,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
-            <img src="./public/img/LogoMatices.png" class="header-logo" alt="Logo de Matices">
+            <img src="./public/img/LogoMatices_11zon.webp" class="header-logo" alt="Logo de Matices">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,12 +116,12 @@
                   <div class="col-md-6">
                       <h3>Pintura de interiores</h3>
                       <p>Brindamos un acabado impecable para el interior de tu hogar, ajustándonos a tu estilo y necesidades.</p>
-                      <img  class="services-images"  src="./public/img/sala-de-estar.png" alt="">
+                      <img  class="services-images"  src="./public/img/sala-de-estar_11zon.webp" alt="">
                   </div>
                   <div class="col-md-6">
                       <h3 class="tittle-service-2">Pintura de exteriores</h3>
                       <p>Protegemos y embellecemos el exterior de tu casa con pintura resistente y duradera.</p>
-                      <img class="services-images" src="./public/img/casa-moderna.png" alt="">
+                      <img class="services-images" src="./public/img/casa-moderna_11zon.webp" alt="">
                   </div>
               </div>
           </article>
