--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto gap-5 navbar-spaces">
+            <div class="collapse navbar-collapse mt-3" id="navbarNav">
+                <ul class="navbar-nav ms-auto gap-3 navbar-spaces">
                     <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#galeria">Galería</a></li>
