addmeta of google

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="geo.placename" content="Medellín">
     <meta name="geo.position" content="6.2476;-75.5658">
     <meta name="ICBM" content="6.2476, -75.5658">
+    <meta name="google-site-verification" content="HoiQXmij1N8iDwaphhOHshzABSGNFmZTwy9VhxVtybw" />
 
     <meta name="contact" content="+57 3208792013">
     <meta name="contact_email" content="juanjoarenas1218@gmail.com">
@@ -101,6 +102,7 @@
 
       <!-- Hero Section -->
         <section class="hero d-flex justify-content-center align-items-center">
+          <h1>Pintores en Medellín</h1>
           <div class="hero-content text-center">
               <h2>Transformamos tu hogar con los mejores acabados</h2>
               <p>Profesionales en pintura de interiores y exteriores en Medellín.</p>
